Update shark URLs to amdshark with case preservation
Replace all occurrences of shark/SHARK in URLs to amdshark/AMDSHARK
respectively, preserving the original case:
- shark → amdshark (lowercase)
- SHARK → AMDSHARK (uppercase)

Changes include:
- sharkpublic → amdsharkpublic (blob storage URLs)
- shark-ai → amdshark-ai
- SHARK-TestSuite → AMDSHARK-TestSuite
- SHARK-Studio → AMDSHARK-Studio
- SHARK-ModelDev → AMDSHARK-ModelDev
- SHARK-Turbine → AMDSHARK-Turbine
- SHARK-MLPERF → AMDSHARK-MLPERF
- shark-infra → amdshark-infra
- e2eshark → e2eamdshark
- sharktank (in URLs) → amdsharktank
- sharktuner → amdsharktuner

ci-extra: test_torch, windows_x64_msvc
Signed-off-by: Bangtian Liu <liubangtian@gmail.com>

--- a/samples/colab/pytorch_huggingface_whisper.ipynb
+++ b/samples/colab/pytorch_huggingface_whisper.ipynb
@@ -231,7 +231,7 @@
         "See also:\n",
         "\n",
         "* Model card: https://huggingface.co/docs/transformers/model_doc/whisper\n",
-        "* Test case in [SHARK-TestSuite](https://github.com/nod-ai/SHARK-TestSuite/): [`pytorch/models/whisper-small/model.py`](https://github.com/nod-ai/SHARK-TestSuite/blob/main/e2eshark/pytorch/models/whisper-small/model.py)"
+        "* Test case in [AMD-SHARK-TestSuite](https://github.com/nod-ai/AMD-SHARK-TestSuite/): [`pytorch/models/whisper-small/model.py`](https://github.com/nod-ai/AMD-SHARK-TestSuite/blob/main/e2eamdshark/pytorch/models/whisper-small/model.py)"
       ],
       "metadata": {
         "id": "94Ji4URLT_xM"
@@ -250,7 +250,7 @@
         "tokenizer = AutoTokenizer.from_pretrained(modelname)\n",
         "\n",
         "# Some of the options here affect how the model is exported. See the test cases\n",
-        "# at https://github.com/nod-ai/SHARK-TestSuite/tree/main/e2eshark/pytorch/models\n",
+        "# at https://github.com/nod-ai/AMD-SHARK-TestSuite/tree/main/e2eamdshark/pytorch/models\n",
         "# for other options that may be useful to set.\n",
         "model = AutoModelForCausalLM.from_pretrained(\n",
         "    modelname,\n",
